模拟预测模块更新

--- a/手册/规则编辑方法.md
+++ b/手册/规则编辑方法.md
@@ -1,4 +1,4 @@
-#  策略字段与表达式参考
+#  排名策略与表达式参考
 
 > 适用于 `score_ui.py` 里“策略测试器（单条规则）”的 JSON 规则；也同样适用于 `config.py` 中 `SC_RULES` 的写法。
 
@@ -168,3 +168,136 @@
 - 使用 `J/VR` 时若源数据缺列，系统会自动兜底计算；默认把缺失当作 `False` 处理。
 - `scope="EACH"`/`PERBAR`：对每个满足 `when=True` 的 K 线进行逐条计数并叠加 `points`。适用于“日内/逐K加权”的场景。
 
+# 预测策略与表达式参考
+
+## 价格相关
+
+- `mode`：价格模式（决定“明日”的开/收如何生成）
+   取值：
+  - `close_pct`：开=昨收，收=昨收×(1+`pct`%)。predict_core
+  - `open_pct`：开=昨收×(1+`pct`%)，收=昨收（不变）。predict_core
+  - `gap_then_close_pct`：开=昨收×(1+`gap_pct`%)，收=开×(1+`pct`%)。predict_core
+  - `flat`：开=收=昨收。predict_core
+  - `limit_up` / `limit_down`：开=收=昨收×(1+`limit_up_pct`% / `limit_dn_pct`%)（默认 ±9.9%）。predict_core predict_core
+- `pct`：涨跌幅百分比；用于 `close_pct` / `open_pct` / `gap_then_close_pct` 的**收盘段**。predict_core
+- `gap_pct`：跳空百分比；仅 `gap_then_close_pct` 使用（先按它定“开盘”）。predict_core
+- `limit_up_pct` / `limit_dn_pct`：涨跌停幅度（%），仅在 `limit_up/limit_down` 使用；默认 9.9 / -9.9。predict_core
+- `lock_higher_than_open`：若为 True，强制 **收盘 ≥ 开盘**（生成完 O/C 后再修正）。predict_core
+- `lock_inside_day`：若为 True，强制 **最高/最低** 把 O/C **包住**（生成 H/L 后，H=max(H,O,C)，L=min(L,O,C)）。predict_core
+
+------
+
+## 高低点生成（`hl_mode`）
+
+决定“明日”的 **H/L** 怎么从上一日推演：
+
+- `follow`：跟随上一日相对 **O/C** 的上下“余量”按比例外推；若某侧没空间给一个极小量（0.001）保证包含。
+   直觉：保持昨天“相对振幅结构”，把它平移到新一天的 O/C 上。predict_core
+- `atr_like`：用昨天振幅 `(H-L)` 乘 `atr_mult` 得出一个“目标振幅”，再以 **(O+C)/2** 为中点对称展开到 H/L。predict_core
+- `range_pct`：目标振幅 = `max(O,C)` × `range_pct`% ，同样以 **(O+C)/2** 为中点对称展开。predict_core
+
+配套参数：
+
+- `atr_mult`：仅 `atr_like` 使用；例如 1.0 表示用昨振幅，2.0 表示放大一倍。predict_core
+- `range_pct`（%）：仅 `range_pct` 使用；例如 2 表示 H/L 总振幅≈ 2%（围绕 (O+C)/2 对称）。predict_core
+
+------
+
+## 成交量（`vol_mode`）
+
+决定“明日”的 **V**：
+
+- `same`：沿用昨量（不变）。
+- `pct`：V = 昨量 × (1 + `vol_arg`%)。
+- `mult`：V = 昨量 × `vol_arg`（若传 0，内部按 1 处理）。
+   以上三种模式都会做 **非负保护**：`max(V, 0.0)`。predict_core
+
+> `vol_arg` 的含义取决于 `vol_mode`：在 `pct` 下是百分比（如 20=+20%），在 `mult` 下是倍数（如 1.5=放大50%）。predict_core
+
+------
+
+## 其他
+
+- `warmup_days`：用于读取和指标重算的“历史窗口基准天数”；读取时实际上会回看约 `warmup_days*3` 个自然日来覆盖周末停牌，窗口越大，指标越稳，但计算更慢。predict_core predict_core
+- （进阶）`PerStockOverride`：可按**个股**覆写上述任意字段（例如给 ST 股单独设置 `limit_up_pct`），规则里的 `scenario` 或 UI 的全局场景都能与之配合。predict_core
+
+------
+
+## 迷你示例
+
+```
+{
+  "name": "放量突破近20日高点",
+  "check": "HH:=HHV(H,20); VR:=SAFE_DIV(V,MA(V,20)); SIG:=(C>HH) AND (VR>=1.5);",
+  "scenario": {
+    "mode": "gap_then_close_pct",
+    "gap_pct": -0.5,
+    "pct": 2.0,
+    "hl_mode": "atr_like",
+    "atr_mult": 1.2,
+    "vol_mode": "mult",
+    "vol_arg": 1.5,
+    "lock_higher_than_open": true,
+    "warmup_days": 80
+  }
+}
+```
+
+- 开：先跳空 -0.5%，收：在开盘基础上再涨 2%；
+- H/L：用昨振幅×1.2，对称展开；
+- 量：在昨量基础上放大 1.5 倍；
+- 收盘不低于开盘；读历史窗口按 80 天基准估。上述字段含义与实现逻辑对应到 `predict_core.py`。
+
+# 持仓策略与表达式参考
+
+## 能用哪些“词条”（变量）？
+
+判定时系统会给你的表达式注入这些变量（数组，按时间序）：
+
+- **价格量**：`OPEN, HIGH, LOW, CLOSE, V`（等价 O/H/L/C/VOL）。这是从“历史 +（可选）虚拟明日”拼好的序列。predict_core
+- **环境**：`TS`（代码）、`REF_DATE`（判定目标日，若启用虚拟日则为模拟那一天）。predict_core
+- **持仓相关**：`ENTRY_PRICE`（你上面输入或“策略取价”的买点）、`UNREAL_PNL`（用目标日收盘估的浮盈比例）。`UNREAL_PNL` 会在读取最后一根K线后自动算好：`(last_close-ENTRY_PRICE)/ENTRY_PRICE`。predict_core
+
+> 如果你在 UI 勾选“基于明日虚拟日检查”，会先按你给的 **Scenario** 合成“明日一根 K”，再判定；否则只用历史到参考日。score_ui predict_core
+
+## 表达式语法（类 TDX）
+
+直接写 **布尔表达式** 或多行 TDX 片段（`A:=...;`），最后一行要能产生布尔序列；系统取**最后一个值**作为“是否触发”。常用函数/操作包括：`MA/EMA/SMA/LLV/HHV/SUM/STD/REF/CROSS/COUNT/IF/AND/OR/NOT/SAFE_DIV` 等（项目里的指标与规则已经在用这套写法）。predict_core indicators
+
+## 可重算哪些指标列？
+
+若你的表达式要用到已注册指标（如 `j/vr/bbi/diff/z_score/...`），可以在 UI 选择“全部/自选/不重算”，启用虚拟日时会把这些列重算后写回 df；不用虚拟日则只读历史基础列。稳妥做法是**在表达式里现算**（比如现场算 KDJ），就不依赖列了。score_ui predict_core indicators
+
+## `POSITION_POLICIES` 的结构
+
+```
+POSITION_POLICIES = [
+    {
+        "name": "止损—跌破10日线",
+        "when": "CLOSE < MA(CLOSE,10)",
+        "explain": "收盘跌破10日均线"
+    },
+    {
+        "name": "止盈—浮盈≥20%且回落",
+        "when": "UNREAL_PNL >= 0.2 AND CLOSE < MA(CLOSE,5)",
+        "explain": "浮盈≥20%回撤至5日线下"
+    },
+    {
+        "name": "固定止损−8%",
+        "when": "SAFE_DIV(CLOSE-ENTRY_PRICE, ENTRY_PRICE) <= -0.08",
+        "explain": "相对买点回撤 8% 触发"
+    },
+    {
+        "name": "加仓信号—放量站上20日",
+        "when": "CROSS(MA(CLOSE,5), MA(CLOSE,20)) AND SAFE_DIV(V, MA(V,20)) >= 1.5",
+        "explain": "5上20且量比≥1.5"
+    }
+]
+```
+
+- 这些就是 UI 里“持仓建议（个股）→ 选择策略 → 执行检查”的来源；系统会输出 `name / hit / explain / entry_price / unreal_pnl / ref_date / sim_date`。score_ui predict_core
+
+## 进阶：买点来源 & 虚拟日
+
+- **买点**可以三选一：按日期取开收高低、从 `OPPORTUNITY_POLICIES` 里“策略取价”、或手输；最终都会传给 `ENTRY_PRICE`。score_ui score_ui
+- **虚拟日场景**（若勾选）使用和“明日预测”一致的 `Scenario` 字段（`mode/pct/gap_pct/hl_mode/atr_mult/range_pct/vol_mode/vol_arg/...`），你刚问过的那些词条在这里同样生效。score_ui
